# gazebo_addons

./: README.md
system__waste_bin/: CMakeLists.txt  README.md  package.xml
system__waste_bin/include/waste_bin/: WasteBin.hh
system__waste_bin/src/: WasteBin.cc
system__waste_bin/worlds/: waste_bin.sdf
