<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_waste_bin</name>
  <version>0.0.0</version>
  <description>A gz-sim system plugin to remove models that make contact to the model this plugin is attached to.</description>
  <maintainer email="johan.rutgeerts@lancewood.eu">Johan Rutgeerts</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>gz-cmake3</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>gz-plugin2</depend>
  <depend>gz-common5</depend>
  <depend>gz-sim8</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
